some spacing fixed

--- a/client/src/assets/css/plus.css
+++ b/client/src/assets/css/plus.css
@@ -57,8 +57,8 @@
     border: 1px solid #D5D5D5 !important;
     border-radius: 11px !important;
     width: 100%;
-    background-color: transparent !important;
-    color: #fff !important;
+    background-color: white !important;
+    color: rgba(112, 112, 112, 0.54) !important;
     font-size: 18px !important;
 }
 
